# Fast-DDS

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  MODULE.bazel
scripts/: install_bazel.sh
src/cpp/fastdds/xtypes/dynamic_types/: AnnotationDescriptorImpl.hpp
