load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

load(
    "@cmake_configure_file//:cmake_configure_file.bzl",
    "cmake_configure_file",
)

cmake_configure_file(
    name = "configure_file",
    src = "include/fastrtps/config.h.in",
    out = "include/fastrtps/config.h",
    cmakelists = [
        "CMakeLists.txt",
    ],
    defines = [
        "HAVE_CXX0X",
        "HAVE_CXX11",
        "HAVE_CXX_CONSTEXPR=1",
        "HAVE_SECURITY=0",
        "__BIG_ENDIAN__=1",
        "FASTRTPS_VERSION_MAJOR=1",
        "FASTRTPS_VERSION_MINOR=5",
        "FASTRTPS_VERSION_MICRO=0",
        "FASTRTPS_VERSION_STR=1.5.0"
    ],
    undefines = [
    ],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "fastdds",
    hdrs = glob([
        "include/**/*.h",
        "include/**/*.hpp",
        "src/cpp/**/*.h",
        "src/cpp/**/*.hpp",
    ]) + [
        ":configure_file",
    ],
    srcs = [
        "src/cpp/log/Log.cpp",
        "src/cpp/log/StdoutConsumer.cpp",
        "src/cpp/utils/eClock.cpp",
        "src/cpp/utils/IPFinder.cpp",
        "src/cpp/utils/md5.cpp",
        "src/cpp/utils/StringMatching.cpp",
        "src/cpp/rtps/resources/ResourceEvent.cpp",
        "src/cpp/rtps/resources/TimedEvent.cpp",
        "src/cpp/rtps/resources/TimedEventImpl.cpp",
        "src/cpp/rtps/resources/AsyncWriterThread.cpp",
        "src/cpp/rtps/resources/AsyncInterestTree.cpp",
        "src/cpp/rtps/Endpoint.cpp",
        "src/cpp/rtps/writer/RTPSWriter.cpp",
        "src/cpp/rtps/writer/StatefulWriter.cpp",
        "src/cpp/rtps/writer/ReaderProxy.cpp",
        "src/cpp/rtps/writer/StatelessWriter.cpp",
        "src/cpp/rtps/writer/ReaderLocator.cpp",
        "src/cpp/rtps/writer/timedevent/InitialHeartbeat.cpp",
        "src/cpp/rtps/writer/timedevent/PeriodicHeartbeat.cpp",
        "src/cpp/rtps/writer/timedevent/NackResponseDelay.cpp",
        "src/cpp/rtps/writer/timedevent/NackSupressionDuration.cpp",
        "src/cpp/rtps/history/CacheChangePool.cpp",
        "src/cpp/rtps/history/History.cpp",
        "src/cpp/rtps/history/WriterHistory.cpp",
        "src/cpp/rtps/history/ReaderHistory.cpp",
        "src/cpp/rtps/reader/timedevent/HeartbeatResponseDelay.cpp",
        "src/cpp/rtps/reader/timedevent/WriterProxyLiveliness.cpp",
        "src/cpp/rtps/reader/timedevent/InitialAckNack.cpp",
        "src/cpp/rtps/reader/CompoundReaderListener.cpp",
        "src/cpp/rtps/reader/WriterProxy.cpp",
        "src/cpp/rtps/reader/StatefulReader.cpp",
        "src/cpp/rtps/reader/StatelessReader.cpp",
        "src/cpp/rtps/reader/RTPSReader.cpp",
        "src/cpp/rtps/reader/FragmentedChangePitStop.cpp",
        "src/cpp/rtps/messages/CDRMessagePool.cpp",
        "src/cpp/rtps/messages/RTPSMessageCreator.cpp",
        "src/cpp/rtps/messages/RTPSMessageGroup.cpp",
        "src/cpp/rtps/messages/MessageReceiver.cpp",
        "src/cpp/rtps/messages/submessages/AckNackMsg.hpp",
        "src/cpp/rtps/messages/submessages/DataMsg.hpp",
        "src/cpp/rtps/messages/submessages/GapMsg.hpp",
        "src/cpp/rtps/messages/submessages/HeartbeatMsg.hpp",
        "src/cpp/rtps/network/NetworkFactory.cpp",
        "src/cpp/rtps/network/SenderResource.cpp",
        "src/cpp/rtps/network/ReceiverResource.cpp",
        "src/cpp/rtps/participant/RTPSParticipant.cpp",
        "src/cpp/rtps/participant/RTPSParticipantImpl.cpp",
        "src/cpp/rtps/RTPSDomain.cpp",
        "src/cpp/Domain.cpp",
        "src/cpp/participant/Participant.cpp",
        "src/cpp/participant/ParticipantImpl.cpp",
        "src/cpp/publisher/Publisher.cpp",
        "src/cpp/publisher/PublisherImpl.cpp",
        "src/cpp/publisher/PublisherHistory.cpp",
        "src/cpp/subscriber/Subscriber.cpp",
        "src/cpp/subscriber/SubscriberImpl.cpp",
        "src/cpp/subscriber/SubscriberHistory.cpp",
        "src/cpp/transport/UDPv4Transport.cpp",
        "src/cpp/transport/UDPv6Transport.cpp",
        "src/cpp/transport/test_UDPv4Transport.cpp",
        "src/cpp/qos/ParameterList.cpp",
        "src/cpp/qos/ParameterTypes.cpp",
        "src/cpp/qos/QosList.cpp",
        "src/cpp/qos/QosPolicies.cpp",
        "src/cpp/qos/WriterQos.cpp",
        "src/cpp/qos/ReaderQos.cpp",
        "src/cpp/rtps/builtin/BuiltinProtocols.cpp",
        "src/cpp/rtps/builtin/discovery/participant/PDPSimple.cpp",
        "src/cpp/rtps/builtin/discovery/participant/PDPSimpleListener.cpp",
        "src/cpp/rtps/builtin/discovery/participant/timedevent/RemoteParticipantLeaseDuration.cpp",
        "src/cpp/rtps/builtin/discovery/participant/timedevent/ResendParticipantProxyDataPeriod.cpp",
        "src/cpp/rtps/builtin/discovery/endpoint/EDP.cpp",
        "src/cpp/rtps/builtin/discovery/endpoint/EDPSimple.cpp",
        "src/cpp/rtps/builtin/discovery/endpoint/EDPSimpleListeners.cpp",
        "src/cpp/rtps/builtin/discovery/endpoint/EDPStatic.cpp",
        "src/cpp/rtps/builtin/liveliness/WLP.cpp",
        "src/cpp/rtps/builtin/liveliness/WLPListener.cpp",
        "src/cpp/rtps/builtin/liveliness/timedevent/WLivelinessPeriodicAssertion.cpp",
        "src/cpp/rtps/builtin/data/ParticipantProxyData.cpp",
        "src/cpp/rtps/builtin/data/WriterProxyData.cpp",
        "src/cpp/rtps/builtin/data/ReaderProxyData.cpp",
        "src/cpp/rtps/flowcontrol/ThroughputController.cpp",
        "src/cpp/rtps/flowcontrol/ThroughputControllerDescriptor.cpp",
        "src/cpp/rtps/flowcontrol/FlowController.cpp",
        "src/cpp/rtps/exceptions/Exception.cpp",
        "src/cpp/rtps/attributes/PropertyPolicy.cpp",
        "src/cpp/rtps/common/Token.cpp",
        "src/cpp/xmlparser/XMLParserCommon.cpp",
        "src/cpp/xmlparser/XMLProfileElementParser.cpp",
        "src/cpp/xmlparser/XMLEndpointParser.cpp",
        "src/cpp/xmlparser/XMLProfileParser.cpp"
    ],
    includes = [
        "include",
        "include/fastrtps",
        "src/cpp",
    ],
    deps = [
        "@wheelos_fastcdr//:fastcdr",
        "@tinyxml2",
        "@asio//:asio",
    ]
)
